<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_info_height_112"
            android:background="@color/color_primary"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/user_info_bar_item.static">

                <TextView
                    android:id="@+id/rating_quantity_static_tv"
                    style="@style/user_info_bar_text.quantity"/>

                <TextView
                    android:id="@+id/rating_title_static_tv"
                    style="@style/user_info_bar_text"
                    android:text="@string/rating"/>
            </LinearLayout>

            <View
                style="@style/vertical_divider.static"></View>

            <LinearLayout
                style="@style/user_info_bar_item.static">

                <TextView
                    android:id="@+id/lines_code_quantity_static_tv"
                    style="@style/user_info_bar_text.quantity"/>

                <TextView
                    android:id="@+id/lines_code_title_static_tv"
                    style="@style/user_info_bar_text"
                    android:text="@string/lines_code"/>
            </LinearLayout>

            <View
                style="@style/vertical_divider.static"></View>

            <LinearLayout
                style="@style/user_info_bar_item.static">

                <TextView
                    android:id="@+id/project_quantity_static_tv"
                    style="@style/user_info_bar_text.quantity"/>

                <TextView
                    android:id="@+id/project_title_static_tv"
                    style="@style/user_info_bar_text"
                    android:text="@string/projects"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/github_circle"/>

            <ListView
                android:id="@+id/repositories_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_medium_32"/>

            <ImageView
                android:id="@+id/show_git_iv"
                style="@style/icon.right"
                android:src="@drawable/eye"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size_1"
            android:layout_marginLeft="@dimen/spacing_larger_72"
            android:background="@color/grey_light"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/account_circle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/spacing_medium_32"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_me_et_profile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/about_me_title"
                        android:scrollHorizontally="false"
                        android:singleLine="false"
                        android:text="@string/about_me_body"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        android:textSize="@dimen/font_normal_15"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp"
                android:visibility="invisible"/>
        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>