<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="character"
            type="com.bugtsa.iceandfire.data.storage.models.CharacterOfHouse"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout_character"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:contextCompat=".ui.activities.CharacterActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_layout_character"
            style="@style/appbar"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar_character"
                style="@style/match_and_wrap"
                app:contentScrim="@color/color_primary_dark"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/character_image_view"
                    style="@style/user_image"
                    app:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_character"
                    style="@style/toolbar"
                    android:titleTextColor="@color/white"
                    app:layout_collapseMode="pin"/>
            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/spacing_normal_16"
                android:orientation="vertical">

                <!--Words-->
                <LinearLayout
                    android:id="@+id/words_layout"
                    style="@style/character_row">

                    <TextView
                        style="@style/text_view_left.drawable"
                        android:text="@string/character_words"
                        tools:text="@string/character_words"/>

                    <TextView
                        android:id="@+id/words_character_text_view"
                        style="@style/text_view_right"
                        tools:ignore="RtlHardcoded"
                        tools:text="@string/character_words"/>
                </LinearLayout>

                <!--Born-->
                <LinearLayout
                    android:id="@+id/born_layout"
                    style="@style/character_row">

                    <TextView
                        style="@style/text_view_left.drawable"
                        android:text="@string/character_born"
                        tools:text="@string/character_born"/>

                    <TextView
                        android:id="@+id/born_character_text_view"
                        style="@style/text_view_right"
                        tools:ignore="RtlHardcoded"
                        tools:text="@string/character_born"/>
                </LinearLayout>

                <!--Titles-->
                <LinearLayout
                    android:id="@+id/titles_layout"
                    style="@style/character_row">

                    <TextView
                        style="@style/text_view_left.drawable"
                        android:text="@string/character_titles"
                        tools:text="@string/character_titles"/>

                    <TextView
                        android:id="@+id/titles_character_text_view"
                        style="@style/text_view_right"
                        tools:text="@string/character_titles"/>
                </LinearLayout>

                <!--Aliases-->
                <LinearLayout
                    android:id="@+id/aliases_layout"
                    style="@style/character_row">

                    <TextView
                        style="@style/text_view_left.drawable"
                        android:text="@string/character_aliases"
                        tools:text="@string/character_aliases"/>

                    <TextView
                        android:id="@+id/aliases_character_text_view"
                        style="@style/text_view_right"
                        tools:text="@string/character_aliases"/>
                </LinearLayout>

                <!--fatherButton-->
                <LinearLayout
                    android:id="@+id/father_layout"
                    style="@style/character_row">

                    <TextView
                        android:id="@+id/father_character_text_view"
                        style="@style/text_view_left.button"
                        android:text="@string/character_father"
                        tools:text="@string/character_father"/>

                    <LinearLayout
                        style="@style/text_view_right">

                        <Button
                            android:id="@+id/father_character_button"
                            style="@style/parent_button"
                            tools:text="@string/character_father"/>
                    </LinearLayout>
                </LinearLayout>

                <!--motherButton-->
                <LinearLayout
                    android:id="@+id/mother_layout"
                    style="@style/character_row">

                    <TextView
                        android:id="@+id/mother_character_text_view"
                        style="@style/text_view_left.button"
                        android:text="@string/character_mother"
                        tools:text="@string/character_mother"/>

                    <LinearLayout
                        style="@style/text_view_right">

                        <Button
                            android:id="@+id/mother_character_button"
                            style="@style/parent_button"
                            tools:text="@string/character_mother"/>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>