<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_coordinator_auth"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:fitsSystemWindows="true"
            android:src="@drawable/login_bg"/>

        <android.support.v7.widget.CardView
            android:id="@+id/authorization_box"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/corner_radius_card_2"
            app:cardElevation="@dimen/spacing_small_8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_normal_16"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/spacing_medium_32">

                    <View
                        android:id="@+id/login_indicator"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="20dp"
                        android:background="@color/color_accent"/>

                    <TextView
                        android:id="@+id/login_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@string/ff_medium"
                        android:paddingBottom="@dimen/spacing_small_8"
                        android:paddingTop="@dimen/spacing_small_8"
                        android:text="@string/sing_in"
                        android:textAllCaps="true"
                        android:textColor="@color/color_accent"
                        android:textSize="20dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/spacing_medial_24"
                    android:paddingLeft="@dimen/spacing_medial_24"
                    android:paddingRight="@dimen/spacing_medial_24">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_email_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_email_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/ff_regular"
                            android:hint="@string/email_address_title"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/login_password_til"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_password_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/ff_regular"
                            android:hint="Пароль"
                            android:inputType="textPassword"
                            android:textColor="@color/grey"
                            android:textColorHint="@color/grey"
                            android:textSize="@dimen/font_small_14"/>
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/login_btn"
                        style="@style/AppTheme.Button.Red"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:minWidth="126dp"
                        android:text="@string/sing_in"
                        android:textAllCaps="true"
                        android:theme="@style/AppTheme.Button.Red"/>

                    <TextView
                        android:id="@+id/remember_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/spacing_normal_16"
                        android:fontFamily="@string/ff_regular"
                        android:text="Забыли пароль?"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/font_small_14"/>

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>